--- a/index.html
+++ b/index.html
@@ -1,29 +1,308 @@
-<section class="hero" id="about-me">
-  <div class="about-me">
-    <h2>Hello, I'm Arupam</h2>
-    <p>
-      Welcome to my personal website! I am a Neuroscience Researcher at the
-      <a href="https://idn.biologie.uni-mainz.de/" target="_blank" style="color: #1d4ed8; text-decoration: none;">
-        Institute of Developmental Biology and Neurobiology (iDN)
-      </a>, Germany.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Arupam Biswas</title>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet" />
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: 'Outfit', sans-serif;
+      color: #0f172a;
+    }
+    nav {
+      background: white;
+      padding: 1.5rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+    nav h1 {
+      font-weight: 700;
+      font-size: 1.5rem;
+    }
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 1.8rem;
+    }
+    nav ul li {
+      font-weight: 600;
+      font-size: 1rem;
+    }
+    nav ul li a {
+      text-decoration: none;
+      color: #0f172a;
+      transition: color 0.3s ease;
+    }
+    nav ul li a:hover {
+      color: #1d4ed8;
+    }
+    .hero {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      height: 100vh;
+      padding: 3rem;
+      background: #f9fafb;
+    }
+    .hero .about-me {
+      width: 50%;
+      text-align: left;
+      padding-right: 2rem;
+    }
+    .hero .about-me h2 {
+      font-size: 3.5rem;
+      font-weight: 700;
+      margin-bottom: 1.5rem;
+    }
+    .hero .about-me p {
+      font-size: 1.2rem;
+      line-height: 1.8;
+      margin-bottom: 1.5rem;
+    }
+    .hero .profile-image {
+      width: 45%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .hero .profile-image img {
+      width: 100%;
+      max-width: 500px;
+      border-radius: 15px;
+      object-fit: cover;
+      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    }
+    .education-section {
+      padding: 5rem 3rem;
+      background: #f9fafb;
+    }
+    .education-section h2 {
+      font-size: 3rem;
+      font-weight: 700;
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+    .education-subsection {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 3rem;
+    }
+    .education-subsection .content {
+      width: 50%;
+      text-align: left;
+      padding-right: 2rem;
+    }
+    .education-subsection .content h3 {
+      font-size: 2rem;
+      font-weight: 600;
+      margin-bottom: 1rem;
+    }
+    .education-subsection .content p {
+      font-size: 1.2rem;
+      line-height: 1.8;
+    }
+    .education-subsection .image {
+      width: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .education-subsection .image img {
+      width: 100%;
+      max-width: 400px;
+      border-radius: 15px;
+      object-fit: cover;
+      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    }
+    .get-in-touch {
+      padding: 5rem;
+      background: #ffffff;
+      margin-top: 3rem;
+      text-align: center;
+    }
+    .get-in-touch h2 {
+      font-size: 3rem;
+      font-weight: 700;
+      margin-bottom: 2rem;
+    }
+    .get-in-touch p {
+      font-size: 1.2rem;
+      line-height: 1.8;
+      margin-bottom: 2rem;
+    }
+    .social-links {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin-top: 2rem;
+    }
+    .social-links a {
+      display: inline-block;
+      width: 100px;
+      height: 100px;
+    }
+    .social-links a img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      border-radius: 50%;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .social-links a img:hover {
+      transform: scale(1.1);
+      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+    }
+    footer {
+      margin-top: 2rem;
+      padding: 1rem;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #475569;
+      background-color: #f1f5f9;
+    }
+    @media (max-width: 768px) {
+      .education-subsection {
+        flex-direction: column;
+        text-align: center;
+      }
+      .education-subsection .content {
+        width: 100%;
+        padding-right: 0;
+        margin-bottom: 1.5rem;
+      }
+      .education-subsection .image {
+        width: 100%;
+      }
+      .get-in-touch {
+        padding: 3rem 1rem;
+      }
+      .social-links {
+        flex-direction: row;
+      }
+    }
+  </style>
+</head>
+<body>
+  <nav>
+    <h1>Arupam Biswas</h1>
+    <ul>
+      <li><a href="#about-me">About Me</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#research-interests">Research</a></li>
+      <li><a href="#projects">Publications and Awards</a></li>
+      <li><a href="#resources">Resources</a></li>
+      <li><a href="#contact">Get in Touch</a></li>
+    </ul>
+  </nav>
+  <section class="hero" id="about-me">
+    <div class="about-me">
+      <h2>Hello, I'm Arupam</h2>
+      <p>
+        Welcome to my personal website! I am a Neuroscience Researcher at the
+        <a href="https://idn.biologie.uni-mainz.de/" target="_blank" style="color: #1d4ed8; text-decoration: none;">
+          Institute of Developmental Biology and Neurobiology (iDN)
+        </a>, Germany.
+      </p>
+      <p>
+        Neurological diseases are not only permanently debilitating but are the fastest-growing cause of death among non-communicable diseases. Strategies to promote repair of the nervous system are extremely rare, and to date, there are no therapies available.
+      </p>
+      <p>
+        At
+        <a href="https://www.uni-mainz.de/" target="_blank" style="color: #1d4ed8; text-decoration: none;">
+          Johannes Gutenberg University Mainz
+        </a>, in collaboration with the
+        <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank" style="color: #1d4ed8; text-decoration: none;">
+          Max Planck Institute for Polymer Research
+        </a>, our interdisciplinary team combines neurobiology, neuroimmunology, chemistry, and polymer research to develop new strategies for regenerative treatments for multiple sclerosis and traumatic brain and spinal cord injuries.
+      </p>
+      <p>
+        Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!
+      </p>
+    </div>
+    <div class="profile-image">
+      <img src="your-profile-picture.jpg" alt="Profile Background Image" />
+    </div>
+  </section>
+  <section class="education-section" id="education">
+    <h2>Education</h2>
+    <div class="education-subsection">
+      <div class="content">
+        <h3>Undergraduate</h3>
+        <p>
+          Write about your undergraduate education here. Include details about your university, course, and any significant achievements or projects during your undergraduate years.
+        </p>
+      </div>
+      <div class="image">
+        <img src="undergraduate-photo.jpg" alt="Undergraduate Photo" />
+      </div>
+    </div>
+    <div class="education-subsection">
+      <div class="content">
+        <h3>PhD</h3>
+        <p>
+          Write about your PhD journey here. Include details about your research focus, your advisor, and any key findings or contributions you made during your PhD.
+        </p>
+      </div>
+      <div class="image">
+        <img src="phd-photo.jpg" alt="PhD Photo" />
+      </div>
+    </div>
+    <div class="education-subsection">
+      <div class="content">
+        <h3>Future Plans</h3>
+        <p>
+          Write about your future plans here. Mention what you aim to achieve in the coming years, whether it's further research, a new project, or any other aspirations.
+        </p>
+      </div>
+      <div class="image">
+        <img src="future-plans-photo.jpg" alt="Future Plans Photo" />
+      </div>
+    </div>
+  </section>
+  <section class="get-in-touch" id="contact">
+    <h2>Get in Touch</h2>
+    <p><strong>Email:</strong> arupambiswas007@gmail.com</p>
+    <p><strong>Lab:</strong> Dr Ishwariya Venkatesh, <a href="https://www.ccmb.res.in/research/labs/venkatesh-lab" target="_blank">Venkatesh Lab</a> CSIR-CCMB</p>
+    <p><strong>Address:</strong><br>
+      Institute for Developmental Biology and Neurobiology (iDN)<br>
+      Johannes Gutenberg University Mainz<br>
+      Biozentrum 1<br>
+      Hanns-Dieter-Hüsch-Weg 15<br>
+      55128 Mainz<br>
+      Germany
     </p>
     <p>
-      Neurological diseases are not only permanently debilitating but are the fastest-growing cause of death among non-communicable diseases. Strategies to promote repair of the nervous system are extremely rare, and to date, there are no therapies available.
+      Feel free to reach out regarding research collaborations, speaking engagements, or questions about my work. I'm always open to discussing new ideas and potential partnerships.
     </p>
-    <p>
-      At
-      <a href="https://www.uni-mainz.de/" target="_blank" style="color: #1d4ed8; text-decoration: none;">
-        Johannes Gutenberg University Mainz
-      </a>, in collaboration with the
-      <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank" style="color: #1d4ed8; text-decoration: none;">
-        Max Planck Institute for Polymer Research
-      </a>, our interdisciplinary team combines neurobiology, neuroimmunology, chemistry, and polymer research to develop new strategies for regenerative treatments for multiple sclerosis and traumatic brain and spinal cord injuries.
-    </p>
-    <p>
-      Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!
-    </p>
-  </div>
-  <div class="profile-image">
-    <img src="your-profile-picture.jpg" alt="Profile Background Image" />
-  </div>
-</section>
+    <div class="social-links">
+      <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
+        <img src="facebookff.jpg" alt="Facebook Logo">
+      </a>
+      <a href="https://www.instagram.com/arupambiswas/" target="_blank">
+        <img src="instagram.jpg" alt="Instagram Logo">
+      </a>
+      <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
+        <img src="linkedIn.jpg" alt="LinkedIn Logo">
+      </a>
+      <a href="https://x.com/arupamb07" target="_blank">
+        <img src="twitterFL.jpg" alt="X Logo">
+      </a>
+    </div>
+  </section>
+  <footer>
+    © 2025 Arupam Biswas. All rights reserved.
+  </footer>
+</body>
+</html>
